# ambisonic-panner

./: .gitignore  .gitmodules  CMakeLists.txt
Decoder/Source/: PluginProcessor.cpp  PluginProcessor.h
Encoder/Source/: PluginProcessor.cpp  PluginProcessor.h
Libraries/: CMakeLists.txt
Panner/: CMakeLists.txt
Panner/Source/: CMakeLists.txt
Panner/Source/Audio/: CMakeLists.txt  LFO.h  PanModulator.cpp  PanModulator.h  PanParameters.cpp  PanParameters.h  PluginProcessor.cpp  PluginProcessor.h
Panner/Source/GUI/: AutoPanComponent.cpp  AutoPanComponent.h  BasicModGroup.cpp  BasicModGroup.h  CMakeLists.txt  ChannelMeterComponent.cpp  ChannelMeterComponent.h  LFOControlComponent.cpp  LFOControlComponent.h  MainPannerComponent.cpp  MainPannerComponent.h  Panner3DGroup.cpp  Panner3DGroup.h  PluginEditor.cpp  PluginEditor.h
PlugFilterCreator/: CMakeLists.txt  JuceHeader.h  PlugFilterCreator.cpp
